--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ matplotlib==3.5.0  # newest version 3.5.2 has a bug, so we downgrade
 dash==2.5.1
 dash_bootstrap_components==1.1.0
 plotly==5.8.2
+gunicorn
