--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ seaborn
 requests
 matplotlib==3.5.0  # newest version 3.5.2 has a bug, so we downgrade
 dash==2.5.1
+flask==2.1.3
+gevent
 dash_bootstrap_components==1.1.0
 plotly==5.8.2
 gunicorn
